Fix simple table checkbox column so it can't get too small

--- a/plugins/datatable/less/simple-table.less
+++ b/plugins/datatable/less/simple-table.less
@@ -1,11 +1,14 @@
 
-.simple-table-checkbox, 
-.simple-table-checkbox > input {
-  vertical-align: middle;
-  margin: 0;
-  width: 16px;
-  line-height: 16px;
-  max-width: 16px;
+.simple-table-checkbox { 
+  padding: 0 !important;
+  width: 36px;
+  input {
+    min-width: 16px;
+    margin-top: 3px;
+    margin-bottom: 3px;
+    margin-right: 10px;
+    margin-left: 10px;
+  }
 }
 
 
